# modality-probe-elixir

./: .gitignore  LICENSE  README.md  mix.exs
lib/: modality_probe.ex
native/modality_probe_nif/: Cargo.toml  README.md
native/modality_probe_nif/src/: lib.rs
test/: modality_probe_elixir_test.exs
