[package]
name = "modality_probe_nif"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "modality_probe_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.22.2"

[dependencies.modality-probe]
package = "modality-probe-sys"
path = "/usr/share/modality/modality-probe-sys"
